Fixed issues regarding member name overflow and too long tasks being truncated

--- a/src/main/resources/view/DarkTheme.css
+++ b/src/main/resources/view/DarkTheme.css
@@ -157,7 +157,8 @@
 
 .tasks_text {
     -fx-text-fill: white;
-    -fx-font-size: 14px;
+    -fx-font-size: 12px;
+    -fx-font-weight: lighter;
 }
 
 .memberScrollPane {
